--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import "bootstrap";
+$base-bgcolor: #354152;
+$base-color: #7e8ba3;
+$base-font-weight: 300;
+$base-font-size: 1rem;
+$base-line-height: 1.5;
+$base-font-family: Helvetica Neue;
+$base-font-family-fallback: sans-serif;
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  background-color: $base-bgcolor;
+  color: $base-color;
+  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family, $base-font-family-fallback;
+  margin: 0;
+  min-height: 100%;
+}
+::selection {
+  background: rgb(24, 46, 59);
+}
