create about component

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,10 @@
-<p>about works!</p>
+<div class="grid align__item">
+  <div class="diamondForm">
+    <div class="register form">
+      <p>
+        2023-04-07<br />
+        Sangare Fantha Felisha <br />(SZOFT II N)
+      </p>
+    </div>
+  </div>
+</div>
