--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -3,7 +3,10 @@
     <div class="register form">
       <p>Direct link to project Repository</p>
       <div class="form__field">
-        <a href="https://github.com/fe-ktch/Angular-Testomin" target="_blank">
+        <a
+          href="https://github.com/fe-ktch/Angular-BMICalculator"
+          target="_blank"
+        >
           <button
             class="btn btn-outline-light form__field github button"
             type="button"
