fix the great git reset disaster

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="grid align__item">
-  <div class="diamondForm">
+  <div>
     <div class="register form">
       <p>
         2023-04-07<br />
