--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-sm navbar bg">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link" href="/diamond">BMI Calculator</a>
+          <a class="nav-link" href="">BMI Calculator</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
