--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -1,5 +1,5 @@
 <div class="grid align__item">
-  <div class="diamondForm">
+  <div>
     <div class="register form">
       <p>Direct link to project Repository</p>
       <div class="form__field">
