--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -1,3 +1,13 @@
+<!--
+* File: github.component.html
+* Author: Sangare F. Felisha
+* Copyright: 2023, Sangare F. Felisha
+* Group: Szoft II N
+* Date: 2023-01-04
+* Github: https://github.com/fe-ktch/
+* Licenc: GNU GPL
+-->
+
 <div class="grid align__item">
   <div>
     <div class="register form">
