--- a/src/app/testomin/testomin.component.html
+++ b/src/app/testomin/testomin.component.html
@@ -1,3 +1,13 @@
+<!--
+* File: testomin.component.html
+* Author: Sangare F. Felishant
+* Copyright: 2023, Sangare F. Felisha
+* Group: Szoft II N
+* Date: 2023-01-04
+* Github: https://github.com/fe-ktch/
+* Licenc: GNU GPL
+-->
+
 <div class="CalculatorForm">
   <div class="register form">
     <h2>BMI Calculator</h2>
