--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+<!--
+* File: app.component.html
+* Author: Sangare F. Felisha
+* Copyright: 2023, Sangare F. Felisha
+* Group: Szoft II N
+* Date: 2023-01-04
+* Github: https://github.com/fe-ktch/
+* Licenc: GNU GPL
+-->
+
 <div class="container-fluid form">
   <div class="grid align__item">
     <nav class="navbar navbar-expand-sm navbar bg">
