--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
+/*
+* File: app.component.scss
+* Author: Sangare F. Felisha
+* Copyright: 2023, Sangare F. Felisha
+* Group: Szoft II N
+* Date: 2023-01-04
+* Github: https://github.com/fe-ktch/
+* Licenc: GNU GPL
+*/
 
 .align {
     align-items: center;
