--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+/*
+* File: styles.scss
+* Author: Sangare F. Felisha
+* Copyright: 2023, Sangare F. Felisha
+* Group: Szoft II N
+* Date: 2023-01-04
+* Github: https://github.com/fe-ktch/
+* Licenc: GNU GPL
+*/
+
 @import "bootstrap";
 $base-bgcolor: #354152;
 $base-color: #7e8ba3;
